[package]
name = "live_radio"
version = "0.9.1"
authors = ["BrettMayson"]
edition = "2021"

[lib]
name = "live_radio"
crate-type = ["cdylib"]

[dependencies]
alto = "3.0.4"
arma-rs = "1.11.10"
crossbeam-channel = "0.5.13"
log = "0.4.22"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
rust-embed = "8.5.0"
simplemad = "0.9.0"
