[package]
name = "live_radio"
version = "0.8.0"
authors = ["BrettMayson"]
edition = "2021"

[lib]
name = "live_radio"
crate-type = ["cdylib"]

[dependencies]
alto = "3.0.4"
arma-rs = "1.10.4"
crossbeam-channel = "0.5.8"
log = "0.4.20"
rand = "0.8.5"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["blocking"] }
rust-embed = "8.0.0"
simplemad = "0.9.0"
